--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -28,6 +28,10 @@
       <div class="card" id="nine"></div>
   </div>
 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur voluptatibus totam corrupti laboriosam odio velit inventore, minima officiis, sed fugiat tenetur rem aliquid, quaerat modi asperiores repudiandae impedit voluptatem. Architecto.
+  </p>
+
 <button class="button" id="playerOne">Player 1</button>
 <button class="button" id="playerTwo">Player 2</button>
 
