fix the bugs on secondGame function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="site">
         <div id="snowZone">
-            <div class="cotent">
+            <div class="content">
 
             <div class="player" id="playerOne">
                 Player 1
@@ -58,12 +58,17 @@
             </div>
         </div>
         </div>
+
+
+        <div>
+            <button class="reset">Reset Game</button>
+        </div>
     </div>
 
 
 
     <script src="jquery.js"></script>
-    <script src="main.js"></script>
+    <script src="tictactoe.js"></script>
 
 </body>
 
