--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content">
 
             <div class="player" id="playerOne">
-                Player 1
+                Player X
                 <div id="score1">Score: 0</div>
             </div>
 
@@ -51,7 +51,7 @@
 
 
             <div class="player" id="playerTwo">
-                Player 2
+                Player O
                 <div id="score2">Score: 0</div>
             </div>
 
