--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <!-- Sweeet Alert -->
-    <script src="https://cdn.jsdelivr.net/g/sweetalert2@6.0.1(sweetalert2.min.js+sweetalert2.js)"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/sweetalert2@6.0.1(sweetalert2.min.css+sweetalert2.css)">
+    <script src="https://cdn.jsdelivr.net/g/sweetalert2@6.0.1(sweetalert2.min.js+sweetalert2.js)"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 
@@ -59,11 +62,6 @@
         </div>
         </div>
     </div>
-
-
-
-    <script src="jquery.js"></script>
-    <script src="main.js"></script>
 
 </body>
 
