--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/sweetalert2@6.0.1(sweetalert2.min.css+sweetalert2.css)">
     <script src="https://cdn.jsdelivr.net/g/sweetalert2@6.0.1(sweetalert2.min.js+sweetalert2.js)"></script>
     <script src="js/jquery.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/tictactoe.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 
